# aoc-rust

./: .gitignore  Cargo.toml  Makefile
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  config.rs  file.rs  main.rs  template.rs
aoc-solutions/: Cargo.toml
aoc-solutions/benches/: benchmark.rs
aoc-solutions/src/: lib.rs  main.rs  setup.rs
aoc-solutions/src/year2023/: day01.rs  day02.rs  day03.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs
aoc-utils/src/: ansi.rs  direction.rs  grid.rs  lib.rs  num.rs  parser.rs  point.rs
resources/templates/: solution.hbs
